@@ -19,41 +19,84 @@ void Zen :: Mask :: Parse()
 }    
 */
 
+void Tsuki :: Nick :: operator= (const Nick& obj)
+{
+   _data = obj.RetData();
+   Parse();
+}
+void Tsuki :: Nick :: GetData(std::string& data)
+{
+   _data = data;
+   Parse();
+}
+
 void  Tsuki :: Nick:: Parse()
 {
      int i = 0;
-     if(_data[0] != static_cast<char>(95) && ((bool) std::isalpha(_data[0]) != true) )
+     if(static_cast<bool>(std::isalpha(_data[0])) == false && 
+        (_data[0] != static_cast<char>(95) && _data[1] != static_cast<char>(95)) && 
+        _data[0] != '+' && _data[0] != '@' && _data[0] != ':' && _data[0] != '[' && _data[0] != ']' &&
+        _data[0] != static_cast<char>(39) && _data[0] != '{' && _data[0] != '}' && _data[0] != '<' && 
+        _data[0] != '>' && _data[0] != '^' && _data[0] != '&' && _data[0] != '*' && _data[0] != '$'
+        && _data[0] != static_cast<char>(96) )
      {
-           std::cout<<_data<<std::endl;
-           throw std::runtime_error{"ZenIRC Error: First character of a nick can't be non-alpha or '_' ."};
+		 std::cout<<_data<<std::endl;
+        throw std::runtime_error{"ZenIRC Error: First character of a nick can't be non-alpha."};
      } 	     
      for(auto iter = _data.begin(); iter != _data.end(); iter++)
      {
         i = std::distance(_data.begin(),iter);
-        if(_data[i] == static_cast<char>(95)  || ((bool) std::isalpha(_data[i]) == true )  ||  ((bool) std::isdigit(_data[i]) == true ))
+        if(_data[i] == static_cast<char>(95)  || ((bool) std::isalnum(_data[i]) == true )  ||  
+          ((bool) std::isdigit(_data[i]) == true ))
            continue;		
-        else if(_data[i] == Tsuki::Dash || _data[i] == Tsuki::LeftSquareBrackets ||  _data[i] == Tsuki::RightSquareBrackets || _data[i] == Tsuki::LeftSlash || _data[i] == Tsuki::SingleQuote || _data[i] == Tsuki::Power || _data[i] == Tsuki::LeftCurlyBraces  || _data[i] == Tsuki::RightCurlyBraces)
+        else if(_data[i] == Tsuki::Dash || _data[i] == Tsuki::LeftSquareBrackets ||  
+                _data[i] == Tsuki::RightSquareBrackets || _data[i] == Tsuki::LeftSlash || 
+                _data[i] == Tsuki::SingleQuote || _data[i] == Tsuki::Power || 
+                _data[i] == Tsuki::LeftCurlyBraces  || _data[i] == Tsuki::RightCurlyBraces)
             continue;
 	else if(_data[i] == Tsuki::Space || _data[i] == Tsuki::Null || _data[i] == Tsuki::Lf || _data[i] == Tsuki::Cr || _data[i] == ',' )
 	    throw  std::runtime_error{"ZenIRC Error: Can't have any space,comma,null character, carriage return or newline in Nick."};
       }
 }
 
+void Tsuki :: Channel :: operator= (const Channel& obj)
+{
+   _data = obj.RetData();
+   Parse();
+}
 
+void Tsuki :: Channel :: GetData(std::string& data)
+{
+   _data = data;
+   Parse();
+}
+
+void Tsuki :: Channel :: GetUsers(std::string& list)
+{
+   size_t pos = 0;
+   std::string token,delimiter{" "};
+   while((pos = list.find(delimiter)) != std::string::npos)
+   {
+	   token = list.substr(0,pos);
+	   chan_users.push_back(Nick{token});
+	   list.erase(0,pos + delimiter.size());
+   }
+}
+   
 void Tsuki :: Channel  :: Parse()
 {
-       int i = 0;
-       if(_data[0] != '#' && _data[0] != '&' )
-       {     
-           std::cout<<_data<<std::endl;
-           throw std::runtime_error{"ZenIRC Error: First character of a channel must be '#' or '&'. "};
-       }     
-       for(auto iter = _data.begin(); iter != _data.end(); iter++)
-	{
-	   i = std::distance(_data.begin(),iter);
-           if(_data[i]  == Tsuki::Space || _data[i] == Tsuki::Null || _data[i] == Tsuki::Lf || _data[i] == Tsuki::Cr || _data[i] == ',' ) 		
-               throw  std::runtime_error{"ZenIRC Error: Can't have any space,comma,null character, carriage return or newline in Channel."};
-        }
+   int i = 0;
+   if(_data[0] != '#' && _data[0] != '&' )
+   {     
+      throw std::runtime_error{"ZenIRC Error: First character of a channel must be '#' or '&'. "};
+   }     
+   for(auto iter = _data.begin(); iter != _data.end(); iter++)
+   {
+      i = std::distance(_data.begin(),iter);
+      if(_data[i]  == Tsuki::Space || _data[i] == Tsuki::Null || 
+         _data[i] == Tsuki::Lf || _data[i] == Tsuki::Cr || _data[i] == ',' ) 		
+      throw  std::runtime_error{"ZenIRC Error: Can't have any space,comma,null character, carriage return or newline in Channel."};
+   }
 }	
 
 void Tsuki :: User :: Parse()
@@ -109,5 +152,18 @@ void Tsuki :: Prefix :: Parse()
    if(foundexclam == false)
 	  throw std::runtime_error{"ZenIRC Error: Problem parsing prefix,didnt find the hostname and username."}; 	
 }   					
-          	
-  	   
+
+std::string Tsuki :: Irc_Data :: RetSParameters()          	
+{
+   std::string temp;
+   for(auto iter = std::begin(parameters); iter != std::end(parameters); iter++)
+   { temp = temp + " " + *iter; }
+   return temp;
+}  	   
+
+void Tsuki :: Irc_Data :: operator=(const Irc_Data& obj)
+{
+   command = obj.command;
+   parameters = obj.parameters;
+   prefix = obj.prefix;
+}
