@@ -19,7 +19,7 @@ class Bot
 	  IRCConnector conn;
 	  Join_Data server_data;
 	  std::vector<Channel> chan_list;
-      std::vector<std::string> msglogs,users;
+      std::vector<std::string> msglogs;
 	  std::string BotName;
 	  ServerState state;
 	  
@@ -29,24 +29,24 @@ class Bot
 	  bool has_only_space(std::string& data);
 	  bool has_it(std::string& data,const char* command);
 	  bool has_it(std::string& data,char command);
+	  std::vector<std::string> get_user_list(std::string& from);
       std::string get_text_after_command(std::string& message,const char* command);
       virtual void handle_msg(std::string& msg);
       void GetState(ServerState s) { state = s; }
             
    public:
-      Bot(std::string& server,unsigned int port=6667) : conn{server,port}, msglogs{}, users{}, BotName{} {}
+      Bot(std::string& server,unsigned int port=6667) : conn{server,port}, msglogs{}, BotName{} {}
       Bot(std::string& server,std::string& channel,
           std::string& nick,std::string& user,
           std::string& password,
           unsigned int& port)  : conn{server,port}, server_data{server,channel,nick,user,password,port}, 
-                                 msglogs{},users{user},BotName{nick} { GetName(nick); }
+                                 msglogs{},BotName{nick} { GetName(nick); }
       virtual ~Bot() {}
       void segragrator(std::string& message,const char* data);	
 	  void GetName(std::string& name);
 	  std::string RetName() { return BotName; }
 	  ServerState RetState() { return state; }
 	  bool IsRunning() { return running; }
-		 
 	   
 	  //Connect to the server
       virtual void Connect();
